cmake_minimum_required(VERSION 2.6)
 
set(core_src
src/SDL2/SDL.h
src/SDL2/SDL_assert.h
src/SDL2/SDL_atomic.h
src/SDL2/SDL_audio.h
src/SDL2/SDL_bits.h
src/SDL2/SDL_blendmode.h
src/SDL2/SDL_clipboard.h
src/SDL2/SDL_config.h
src/SDL2/SDL_cpuinfo.h
src/SDL2/SDL_endian.h
src/SDL2/SDL_error.h
src/SDL2/SDL_events.h
src/SDL2/SDL_gamecontroller.h
src/SDL2/SDL_gesture.h
src/SDL2/SDL_haptic.h
src/SDL2/SDL_hints.h
src/SDL2/SDL_joystick.h
src/SDL2/SDL_keyboard.h
src/SDL2/SDL_keycode.h
src/SDL2/SDL_loadso.h
src/SDL2/SDL_log.h
src/SDL2/SDL_main.h
src/SDL2/SDL_messagebox.h
src/SDL2/SDL_mouse.h
src/SDL2/SDL_mutex.h
src/SDL2/SDL_name.h
src/SDL2/SDL_opengl.h
src/SDL2/SDL_opengles.h
src/SDL2/SDL_opengles2.h
src/SDL2/SDL_pixels.h
src/SDL2/SDL_platform.h
src/SDL2/SDL_power.h
src/SDL2/SDL_quit.h
src/SDL2/SDL_rect.h
src/SDL2/SDL_render.h
src/SDL2/SDL_revision.h
src/SDL2/SDL_rwops.h
src/SDL2/SDL_scancode.h
src/SDL2/SDL_shape.h
src/SDL2/SDL_stdinc.h
src/SDL2/SDL_surface.h
src/SDL2/SDL_system.h
src/SDL2/SDL_syswm.h
src/SDL2/SDL_test.h
src/SDL2/SDL_test_assert.h
src/SDL2/SDL_test_common.h
src/SDL2/SDL_test_compare.h
src/SDL2/SDL_test_crc32.h
src/SDL2/SDL_test_font.h
src/SDL2/SDL_test_fuzzer.h
src/SDL2/SDL_test_harness.h
src/SDL2/SDL_test_images.h
src/SDL2/SDL_test_log.h
src/SDL2/SDL_test_md5.h
src/SDL2/SDL_test_random.h
src/SDL2/SDL_thread.h
src/SDL2/SDL_timer.h
src/SDL2/SDL_touch.h
src/SDL2/SDL_types.h
src/SDL2/SDL_version.h
src/SDL2/SDL_video.h
src/SDL2/begin_code.h
src/SDL2/close_code.h
src/TinyXML/tinyxml.cpp
src/TinyXML/tinyxml.h
src/TinyXML/tinyxmlerror.cpp
src/TinyXML/tinyxmlparser.cpp
src/allocator.cpp
src/allocator.h
src/allocatorchunk.cpp
src/allocatorchunk.h
src/array.h
src/arraystack.h
src/bmp-format.h
src/bufferedfilestream.cpp
src/bufferedfilestream.h
src/checksum.cpp
src/checksum.h
src/clock.cpp
src/clock.h
src/color.h
src/configmanager.cpp
src/configmanager.h
src/configparser.cpp
src/configparser.h
src/configvar.cpp
src/configvar.h
src/core.h
src/customassert.cpp
src/customassert.h
src/customnew.cpp
src/customnew.h
src/datapipe.cpp
src/datapipe.h
src/display.cpp
src/display.h
src/dynamicmemorystream.cpp
src/dynamicmemorystream.h
src/endianutil.h
src/filestream.cpp
src/filestream.h
src/fileutil.cpp
src/fileutil.h
src/hashedstring.cpp
src/hashedstring.h
src/hashtable.h
src/icontroller.h
src/idatastream.h
src/iinputsystemobserver.h
src/inputcontext.cpp
src/inputcontext.h
src/inputsystem.cpp
src/inputsystem.h
src/interpolator.h
src/keyboard.cpp
src/keyboard.h
src/list.h
src/map.h
src/mathcore.h
src/memorystream.cpp
src/memorystream.h
src/mouse.cpp
src/mouse.h
src/multimap.h
src/packstream.cpp
src/packstream.h
src/printmanager.cpp
src/printmanager.h
src/profiler.cpp
src/profiler.h
src/profilerhook.cpp
src/profilerhook.h
src/profilertable.cpp
src/profilertable.h
src/reversehash.cpp
src/reversehash.h
src/set.h
src/simplestring.cpp
src/simplestring.h
src/stack.h
src/stopwatch.cpp
src/stopwatch.h
src/stringmanager.cpp
src/stringmanager.h
src/test.cpp
src/test.h
src/timedate.cpp
src/timedate.h
src/timer.cpp
src/timer.h
src/versions.h
src/windowwrapper.cpp
src/windowwrapper.h
src/xinputcontroller.cpp
src/xinputcontroller.h
)
 
add_library(Core ${core_src})

target_link_libraries(Core z)